@@ -1,10 +1,30 @@
-# Computer Programming 2 - Payroll System
+# Object-oriented Programming - MotorPH GUI Payroll System
+ 
+| Subject | Section | Group # |
+| :-----: | :-----: | :---: |
+| Object-oriented Programming | A2101 | Group 5 |  
 
-Kaye Joanne Angelika Plaza |
-Claire Helery Noel |
-Kelsy Martinez |
-Daniel Ceasar de Guzman |
-Jerell Lizada |
-Vanessa Rose Salonoy |
-Gabriel Josemaria Ledesma 
+| Members: |
+| :----: |
+| Gabriel Josemaria Ledesma |
+| Martin Lanze Catolos |
+| Iannah Estrada |
+| Nicolo Andrew Sta. Ana |
 
+<h2>Usage</h2>
+
+This program uses JavaFX 23.0.1 components to function. Download the components at the official website here at [GluonHQ](https://gluonhq.com/products/javafx/) and extract the zip file in your operating system's Downloads folder. 
+
+In Netbeans, right-click the project and go to Properties, click "Run" found in the Categories list, then paste the following inside VM Options: 
+
+    For Mac:
+    --module-path "/Users/<Name>/Downloads/javafx-sdk-23.0.1/lib" --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics
+
+    For Windows:
+    --module-path "Users\<Name>\Downloads\javafx-sdk-23.0.1/lib" --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics
+
+After doing the instructions above, select ```MainApplication.java``` and click Run Project to run the program.
+
+<br>
+
+Note: Do NOT try to run the program by right-clicking ```MainApplication.java``` and then selecting 'Run File' as the program will fail to start at all.
